20/05/08,update GC&Linux